# mcp-printable

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SETUP.md  install.py  pyproject.toml  scad_backend.py  server.py
.agents/skills/blender-app/: SKILL.md
.agents/skills/blender-design-loop/: SKILL.md
.agents/skills/image-displacement/: SKILL.md
.agents/skills/print-in-place/: SKILL.md
.claude/skills/blender-app/: SKILL.md
.claude/skills/blender-design-loop/: SKILL.md
.claude/skills/image-displacement/: SKILL.md
.claude/skills/print-in-place/: SKILL.md
.github/workflows/: publish-to-pypi.yml
addon/: __init__.py  handlers.py  utils.py
docs/blender/: blender-app.md  design-loop.md  image-displacement.md
docs/design/: print-in-place.md
docs/design/print-in-place/recipes/: flip-tile.md  wheel-on-axle.md
docs/internals/: naming.md
docs/openscad/: README.md
evals/: README.md  framework.py  runner.py
evals/adapters/: __init__.py  goose.py  mock.py
evals/goose-recipes/: blender.yaml
evals/judges/: __init__.py  outcome_llm.py  procedural.py
evals/policies/: always-clear-scene.md  prefer-typed-boolean.md  print-in-place-path-traceable.md
evals/recipes/: blender.yaml
evals/results/logs/: simple-cube_gemini-3-flash-preview.stderr.txt
evals/scenarios/: basic-hinge.md  cube-with-hole.md  simple-cube.md
scripts/: sync_addon_version.py
tests/: conftest.py  test_compositing.py  test_protocol.py  test_scad_wrap.py  test_server.py  test_version_check.py  test_version_sync.py
