[project]
name = "printable"
version = "0.1.0"
description = "MCP server for AI-driven 3D modeling and print validation (FDM-focused). Agent-agnostic; works with any MCP client (Claude Code, Goose, Cursor, Codex, ...)."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "Pillow>=10.0.0",
    # OpenSCAD backend: trimesh handles STL I/O, manifold/watertight checks, volume,
    # bbox, and gives us face_normals for overhang analysis. numpy is a transitive
    # dep but pinned explicitly so the SCAD overhang code can rely on it.
    "trimesh>=4.0.0",
    "numpy>=1.24",
]

[project.scripts]
printable = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single-module server + the SCAD backend helper. The addon/ dir ships separately via install.py.
only-include = ["server.py", "scad_backend.py"]
